--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,12 +7,27 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ST10251759_PROG6212_POE.styles.css" asp-append-version="true" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
+
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ST10251759_PROG6212_POE</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"> ClaimStream &copy;</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,31 +35,31 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
                         </li>
-                        @* Role-based navigation links *@
+                        @* Role-based navigation links that will display different links based on type of user logged in *@
                         @if (User.IsInRole("Lecturer"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Lecturer" asp-action="Dashboard">Lecturer Dashboard</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Lecturer" asp-action="Dashboard"><i class="fa-solid fa-chart-simple"></i> Lecturer Dashboard</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Claim" asp-action="Create">Submit a Claim</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Claim" asp-action="Create"><i class="fa fa-upload" aria-hidden="true"></i> Submit a Claim</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Claim" asp-action="TrackClaims">Track Claims</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Claim" asp-action="TrackClaims"><i class="fa fa-eye" aria-hidden="true"></i> Track Claims</a>
                             </li>
                         }
                         else if (User.IsInRole("Programme Coordinator"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="ProgrammeCoordinator" asp-action="Index">Approve/Reject Claims Coordinator</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="ProgrammeCoordinator" asp-action="Index"><i class="fa fa-bar-chart" aria-hidden="true"></i> Process Claims</a>
                             </li>
                         }
                         else if (User.IsInRole("Academic Manager"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="AcademicManager" asp-action="Index">Approve/Reject Claims Manager</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="AcademicManager" asp-action="Index"><i class="fa fa-bar-chart" aria-hidden="true"></i> Process Claims</a>
                             </li>
                         }
                     </ul>
@@ -61,9 +76,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer style="background-color: #fff;" class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - ST10251759_PROG6212_POE - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - ST10251759_PROG6212_POE - Cameron Chetty - PROG6212 - POE - PART 2 - CLAIM STREAM
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
